Remove AI artist recommendations
